# PlanarPhysics

./: .gitignore  CMakeLists.txt  PlanarPhysics.sln  README.md
Demo/: CMakeLists.txt  Demo.vcxproj  Demo.vcxproj.filters
Demo/Source/: App.cpp  App.h  DrawHelper.cpp  DrawHelper.h  FramerateTracker.cpp  FramerateTracker.h  Main.cpp  Main.h  Random.cpp  Random.h  RenderObject.cpp  RenderObject.h
Demo/Source/RenderObjects/: RenderBall.cpp  RenderBall.h  RenderRigidBody.cpp  RenderRigidBody.h  RenderWall.cpp  RenderWall.h
Engine/: CMakeLists.txt  PlanarPhysics.vcxproj  PlanarPhysics.vcxproj.filters
Engine/Source/: BoxTree.cpp  CollisionHandler.cpp  CollisionHandler.h  Common.h  Engine.cpp  Engine.h  PlanarObject.cpp  PlanarObject.h
Engine/Source/CollisionHandlers/: BallBallCH.cpp  BallBallCH.h  BallWallCH.cpp  BallWallCH.h  RBodyRBodyCH.cpp  RBodyRBodyCH.h  RigidBodyBallCH.cpp  RigidBodyBallCH.h  RigidBodyWallCH.cpp  RigidBodyWallCH.h
Engine/Source/Math/GeometricAlgebra/: Multivector2D.cpp  Multivector2D.h  PScalar2D.cpp  PScalar2D.h  Rotor2D.cpp  Rotor2D.h  Vector2D.cpp  Vector2D.h
Engine/Source/Math/Utilities/: BoundingBox.cpp  BoundingBox.h  ConvexPolygon.cpp  ConvexPolygon.h  Line.cpp  Line.h  LineSegment.cpp  LineSegment.h  Random.cpp  Random.h  Ray.cpp  Ray.h  Transform.cpp  Transform.h
Engine/Source/PlanarObjects/: Ball.cpp  Ball.h  RigidBody.cpp  RigidBody.h  Wall.cpp  Wall.h
Engine/Source/PlanarPhysics/: BoxTree.h  CollisionHandler.h  Engine.h
Engine/Source/PlanarPhysics/CollisionHandlers/: BallBallCH.cpp  BallBallCH.h  BallWallCH.cpp  BallWallCH.h  RBodyRBodyCH.cpp  RBodyRBodyCH.h  RigidBodyBallCH.cpp  RigidBodyBallCH.h  RigidBodyWallCH.cpp  RigidBodyWallCH.h
Engine/Source/PlanarPhysics/Math/GeometricAlgebra/: Multivector2D.h  PScalar2D.h  Rotor2D.cpp  Rotor2D.h  Vector2D.h
Engine/Source/PlanarPhysics/Math/Utilities/: BoundingBox.cpp  BoundingBox.h  ConvexPolygon.cpp  ConvexPolygon.h  Line.cpp  Line.h  LineSegment.h  Random.h  Ray.cpp  Ray.h  Transform.h
Engine/Source/PlanarPhysics/PlanarObjects/: Ball.cpp  Ball.h  RigidBody.cpp  RigidBody.h  Wall.cpp  Wall.h
Paper/: Paper.tex
